force-app/main/default/objects/District__c/fields/DistrictMapping__c.field-meta.xml
<CustomField>
    <fullName>DistrictMapping__c</fullName>
    <label>DistrictMapping</label>
    <length>20</length>
    <type>Text</type>
</CustomField>