force-app/main/default/objects/District__c/validationRules/Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Name</fullName>
    <active>false</active>
    <errorConditionFormula>Name = IF( Province__r.ProviceMapping__c  =  DistrictMapping__c ,  Name ,&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Province__c</errorDisplayField>
    <errorMessage>Please input province</errorMessage>
</ValidationRule>