force-app/main/default/objects/District__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Province__c</columns>
    <columns>Ownership_Tax__c</columns>
    <columns>Number_Plate_Fee__c</columns>
    <columns>District_Code__c</columns>
    <columns>DistrictMapping__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_Plate_Fee__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>